--- a/solidabisfrontend/styles/Home.module.css
+++ b/solidabisfrontend/styles/Home.module.css
@@ -22,3 +22,14 @@
   border: 0.2px solid black;
   padding: 5px;
 }
+
+.info {
+  position: flex;
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
